<resources>
    <string name="app_name">Расчет НДФЛ</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <!--<string name="banner_ad_unit_id">ca-app-pub-9077835132655402/9081666775</string>-->
    <string name="action_settings">Настройки</string>


    <string name="summ_net">Введена сумма к выплате</string>
    <string name="summ_gross">Введена общая сумма</string>

    <string name="tax_rate">Ставка налога</string>
    <string name="usual13">Обычные доходы 13%</string>
    <string name="nonresident30">Иностранцы 30%</string>
    <string name="dividend9">Дивиденды 9%</string>
    <string name="other_rate">Другая ставка</string>

    <string name="btn_calc">Рассчитать</string>
    <string name="res_sem_net">Сумма к выплате физ.лицу</string>
    <string name="res_sum_tax">Сумма налога к уплате</string>
    <string name="res_all">Общая сумма</string>
    <string name="zero">0.00</string>
    <string name="title_activity_settings">Настройки</string>


    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Округление</string>
    <string name="pref_description_social_recommendations">Округление результата до рубля</string>
    <string name="pref_title_add_friends_to_messages">Оформление</string>

    <string-array name="pref_example_list_titles">
        <item>Светлое</item>
        <item>Темное</item>
    </string-array>

    <string-array name="pref_example_list_values">
        <item>0</item>
        <item>1</item>
    </string-array>

</resources>
